--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6",
+    "@actions/http-client": "^1.0.11",
     "@octokit/rest": "^18.5.2",
     "chalk": "^4.1.0",
     "tsyringe": "^4.5.0",
